--- a/style.css
+++ b/style.css
@@ -4,15 +4,12 @@ body{
     box-sizing: content-box;
     
 }
-
 .game-section{
-   border: 20px solid purple;
-   height: 100vh;
-   font-family:'Times New Roman';
-
-   background-color: rgb(29, 5, 44);
+    border: 20px solid purple;
+    height: 100vh;
+    font-family:'Times New Roman';
+    background-color: rgb(29, 5, 44);
 }
-
 .score-table{
     display: flex;
     justify-content: space-evenly;
@@ -20,16 +17,41 @@ body{
     height: 20vh;
 }
 
+
 .score-table h3{
-    font-size: 20px;
+    font-size: 23px;
     color: white;
 
 }
 .score-table p{
     text-align: center;
-    font-size: 15px;
+    font-size: 18px;
     color:white;
 }
+
+.intro-page{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    height: 50vh;
+}
+.intro-page h1{
+    font-size: 40px;
+    color: white;
+}
+.intro-page button{
+        
+    font-size: 20px;
+    border-radius: 6px;
+    background-color: purple;
+    color: white;
+    width: 10vw;
+    cursor: pointer;
+    height: 40px;
+}
+
+
 .tabble-div{
     padding-left: 15px;
     height: 15vh;
@@ -41,88 +63,55 @@ body{
     background-color: white;
 }
 
-.intro-page{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
-    height: 50vh;
-    
-}
-
-.intro-page h1{
-    font-size: 40px;
-    color: white;
-}
-.intro-page button{
-    
-        font-size: 15px;
-        border-radius: 4px;
-        background-color: purple;
-        color: white;
-        width: 10vw;
-        cursor: pointer;
-        
-        
-    
-}
-
-
 .match-winner{
     position: absolute;
-    top:50%;
+    top:40%;
     left:50%;
     transform: translate(-50%, -50%);
-    padding-top:30px;
+    padding-top:60px;
     cursor:pointer;
 }
-
-
-.option-select{
-display: flex;
-justify-content: space-around;
-align-items: center;
-}
-
-
-
-.player2-image{
-    transform: rotateY(180deg);
-}
 .option-main{
-    padding-top: 40px;
+    padding-top: 50px;
     font-size: 50px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     color: white;
 }
-.option-btn{
-    padding-top: 40px;
+.option-select, .option-btn{
     display: flex;
-    justify-content:space-between;
-    align-items:center;
+    justify-content: space-around;
+    align-items: center;
     
-    
-    
-    
-
 }
-
-.paper-button,.scissors-button,.rock-button{
-    width: 11vw;
-    font-size: 15px;
+.option-btn{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 40px;
+}
+        
+.player2-image{
+        transform: rotateY(180deg);
+    }
+ 
+ .paper-button,.scissors-button,.rock-button{
+    
+    font-size: 20px;
     background-color: purple;
     color: white;
     border-radius: 3px;
-}
+    width: 9vw;
+    height: 4vh;
+    }
 
-div.fadeIn{
-    opacity: 1;
-    pointer-events: all;
-}
-
-div.fadeOut{
-    opacity: 0;
-    pointer-events:all,
-}
+    div.fadeIn{
+        opacity: 1;
+        pointer-events: all;
+    }
+    
+    div.fadeOut{
+        opacity: 0;
+        pointer-events:all,
+    }
