--- a/style.css
+++ b/style.css
@@ -17,7 +17,11 @@ body{
     height: 20vh;
 }
 
+h2{
+    font-size: 23px;
+    color: white;
 
+}
 .score-table h3{
     font-size: 23px;
     color: white;
@@ -36,6 +40,7 @@ body{
     flex-direction: column;
     height: 50vh;
     transition: opacity 1s ease;
+    padding-top: 50px;
 }
 .intro-page h1{
     font-size: 40px;
@@ -69,7 +74,7 @@ body{
     top:40%;
     left:50%;
     transform: translate(-50%, -50%);
-    padding-top:60px;
+    padding-top:110px;
     cursor:pointer;
     opacity:0;
     transition: opacity 1s ease 1s;
@@ -93,12 +98,17 @@ body{
     
     padding-top: 40px;
 }
-        
+.player1-image,.player2-image{
+height: 30vh;
+width: 20vw;
+
+}   
 .player2-image{
         transform: rotateY(180deg);
     }
  
- .paper-button,.scissors-button,.rock-button{
+ .paper-button
+ ,.scissors-button,.rock-button{
     
     font-size: 20px;
     background-color: purple;
@@ -116,4 +126,23 @@ body{
     div.fadeOut{
         opacity: 0;
         pointer-events:none,
+    }
+
+    .scoreClear{
+        display: flex;
+        justify-content: space-evenly;
+        align-content: center;
+        padding-top: 50px;
+    }
+
+    .reset-button{
+        height: 5vh;
+        width: 15vw ;
+        font-size: 20px;
+        border-radius: 6px;
+        background-color: purple;
+        color: white;
+    }
+    @media (screen) {
+        
     }
