--- a/style.css
+++ b/style.css
@@ -131,28 +131,34 @@ width: 20vw;
         color: white;
     }
     @keyframes shakeplayer1 {
-        0% {transform: rotateY(180deg)translateY(0PX)};
-        15% {transform: rotateY(180deg)translateY(-50PX)};
-        25% {transform: rotateY(180deg)translateY(0PX)};
-        35% {transform: rotateY(180deg)translateY(-50PX)};
-        45% {transform: rotateY(180deg)translateY(0PX)};
-        55% {transform: rotateY(180deg)translateY(-50PX)};
-        65% {transform: rotateY(180deg)translateY(0PX)};
-        75% {transform: rotateY(180deg)translateY(-50PX)};
-        85% {transform: rotateY(180deg)translateY(0PX)};
-        100% {transform: rotateY(180deg)translateY(-50PX)};
+        0% {transform: rotateY(180deg)translateY(0px)};
+        15% {transform: rotateY(180deg)translateY(-50px)};
+        25% {transform: rotateY(180deg)translateY(0px)};
+        35% {transform: rotateY(180deg)translateY(-50px)};
+        45% {transform: rotateY(180deg)translateY(0px)};
+        55% {transform: rotateY(180deg)translateY(-50px)};
+        65% {transform: rotateY(180deg)translateY(0px)};
+        75% {transform: rotateY(180deg)translateY(-50px)};
+        85% {transform: rotateY(180deg)translateY(0px)};
+        100% {transform: rotateY(180deg)translateY(-50px)};
     } 
 
-
+    
     @keyframes shakeplayer2 {
-        0% {transform: translateY(0PX)};
-        15% {transform:translateY(-50PX)};
-        25% {transform: translateY(0PX)};
-        35% {transform: translateY(-50PX)};
-        45% {transform: translateY(0PX)};
-        55% {transform: translateY(-50PX)};
-        65% {transform: translateY(0PX)};
-        75% {transform: translateY(-50PX)};
-        85% {transform: translateY(0PX)};
-        100% {transform:translateY(-50PX)};
+        0% {transform: translateY(0px)};
+        15% {transform:translateY(-50px)};
+        25% {transform: translateY(0px)};
+        35% {transform: translateY(-50px)};
+        45% {transform: translateY(0px)};
+        55% {transform: translateY(-50px)};
+        65% {transform: translateY(0px)};
+        75% {transform: translateY(-50px)};
+        85% {transform: translateY(0px)};
+        100% {transform:translateY(-50px)};
     } 
+    .animate1 {
+        animation: shakeplayer1 2s ease;
+    }
+    .animate2 {
+        animation: shakeplayer2 2s ease;
+    }
